--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "discord.js": "^14.21.0",
     "dotenv": "^17.2.1",
     "node-fetch": "^2.7.0",
-    "openai": "^5.11.0"
+    "openai": "^5.11.0",
+    "sharp": "^0.34.3"
   }
 }
