--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/node": "^22.13.11",
     "axios": "^1.11.0",
+    "canvas": "^3.1.2",
     "discord.js": "^14.21.0",
     "dotenv": "^17.2.1",
     "node-fetch": "^2.7.0",
